tests/cases/ok/imports_main.p4
from imports_math import square
from imports_values import seed

def main() -> None:
    print(square(5))
    print(seed)
