tests/cases/fail/module_private_function_access.p4
from module_private_function_access_helpers import _twice

def main() -> None:
    print(_twice(4))
